--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react-dom": "^19.1.1",
     "react": "^19.1.1",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "@google/genai": "latest",
+    "pptxgenjs": "3.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
